Added Creative Tab

--- a/src/main/resources/assets/mekanismneutronactivator/lang/en_us.json
+++ b/src/main/resources/assets/mekanismneutronactivator/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+    "constants.mekanismneutronactivator.mod_name": "Mekanism: Neutron Activator",
+    
     "block.mekanismneutronactivator.fusion_neutron_activator": "Fusion Neutron Activator",
     "block.mekanismneutronactivator.fission_neutron_activator": "Fission Neutron Activator",
 
